# rosflask--sdp

./: README.md  readme.txt
Flask--sdp-main/: README.md
Flask--sdp-main/CoBo staff console/: app.py
Flask--sdp-main/CoBo staff console/data/: accounts.json  example_json1.json  output-floor 2.json  output-floor1.json
Flask--sdp-main/CoBo staff console/templates/: index.html  login.html  register.html
src/flask_msgs/: CMakeLists.txt  package.xml
src/flask_msgs/msg/: flaskMsg.msg
src/flask_sdp_main/: CMakeLists.txt  package.xml
src/flask_sdp_main/CoBo_staff_console/: app.py  pub.py
src/flask_sdp_main/CoBo_staff_console/data/: output-floor1.json
src/flask_sdp_main/CoBo_staff_console/templates/: index.html  login.html  register.html
src/flask_sdp_main/launch/: app.launch
