<?xml version="1.0"?>
<package format="2">
  <name>flask_sdp_main</name>
  <version>0.0.0</version>
  <description>The flask_sdp_main package</description>
  <maintainer email="zj@todo.todo">zj</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>flask_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>flask_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>flask_msgs</exec_depend>
</package>
